# Data-Structures-and-Algorithms-II

./: .gitignore  CMakeLists.txt
build_linux/: README.md
build_windows/: README.md
data/: 20users.csv  Social_Network_Terms.txt  domains.txt
scripts/: build.bat  build.sh  clean.bat  clean.sh  compile.bat  compile.sh  destroy.bat  destroy.sh  run.bat  run.sh
src/: language.h  main.c
src/menu/: menu.c  menu.h
src/menu/list_users/: list_users.c  list_users.h
src/menu/new_user/: new_user.c  new_user.h
src/menu/operate_user/: operate_user.c  operate_user.h
src/menu/operate_user/ceo_utils/: ceo_utils.c  ceo_utils.h
src/menu/operate_user/manage_friends/: manage_friends.c  manage_friends.h
src/menu/operate_user/manage_posts/: manage_posts.c  manage_posts.h
src/menu/operate_user/manage_requests/: manage_requests.c  manage_requests.h
src/network/: network_data_control.c  network_data_control.h  network_file_control.c  network_file_control.h
src/utils/: dictionary_utils.c  dictionary_utils.h  option_utils.c  option_utils.h  print_utils.c  print_utils.h  search_utils.c  search_utils.h  sort_utils.c  sort_utils.h
